# ECM-CPP

./: .gitignore  CMakeLists.txt  build.sh
inc/: common.hpp  complex.hpp  elliptic_curve.hpp  factorization.hpp  point.hpp  primality_test.hpp  util.hpp
src/: complex.cpp  elliptic_curve.cpp  factorization.cpp  main.cpp  point.cpp  primality_test.cpp  util.cpp
